# gradient_figlet

./: .coveragerc  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py  test.txt
gradient_figlet/: __init__.py  __main__.py  pleasing_items.py
